Add config for Pascal VOC

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-torch
-torchvision
-kornia
-tensorboard
-tqdm
-opencv-python
+numpy==1.15.4
+torch==1.5.0
+torchvision==0.6.0
+kornia==0.3.0
+tensorboard==2.2.1
+tqdm==4.45.0
+opencv-python==4.1.0.25
 scipy==1.2
